--- a/ui/bvid-input-view.ui
+++ b/ui/bvid-input-view.ui
@@ -4,12 +4,11 @@
 
   <template class="BvidInputView" parent="GtkPopover">
     <child>
-
       <object class="GtkBox">
         <property name="orientation">horizontal</property>
         <child>
           <object class="GtkEntry" id="bv_input">
-            <property name="width_request">200</property>
+            <property name="width-request">200</property>
             <style>
               <class name="flat"/>
             </style>
