--- a/ui/queue-row.ui
+++ b/ui/queue-row.ui
@@ -6,6 +6,7 @@
       <object class="GtkStack" id="row_stack">
         <child>
           <object class="GtkStackPage">
+            <property name="name">song-details</property>
             <property name="child">
               <object class="GtkBox">
                 <property name="orientation">vertical</property>
@@ -38,11 +39,9 @@
         </child>
         <child>
           <object class="GtkStackPage">
+            <property name="name">selection-mode</property>
             <property name="child">
               <object class="GtkBox">
-                <style>
-                  <class name="song-details"/>
-                </style>
                 <child>
                   <object class="GtkCheckButton" id="selected_button">
                     <property name="halign">center</property>
@@ -80,6 +79,20 @@
                     </child>
                   </object>
                 </child>
+              </object>
+            </property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkStackPage">
+            <property name="name">currently-playing</property>
+            <property name="child">
+              <object class="GtkLabel">
+                <property name="label" translatable="yes">Playing next</property>
+                <property name="xalign">0</property>
+                <style>
+                  <class name="currently-playing"/>
+                </style>
               </object>
             </property>
           </object>
